--- a/gpages/index.html
+++ b/gpages/index.html
@@ -20,9 +20,9 @@
   </head>
   <body>
     <nav>
-        <a href="/testgpages/">Support Vector Olives</a>
-                              &nbsp;|&nbsp;<a href="/testgpages/olives-eda.html">EDA</a>
-                              &nbsp;|&nbsp;<a href="/testgpages/olives-model.html">Models</a>
+        <a href="/CS-109A-Final-Project/gpages/">Support Vector Olives</a>
+                              &nbsp;|&nbsp;<a href="/CS-109A-Final-Project/gpages/olives-eda.html">EDA</a>
+                              &nbsp;|&nbsp;<a href="/CS-109A-Final-Project/gpages/olives-model.html">Models</a>
 
 
 
